--- a/src/components/riskLevel/RiskLevelInput.css
+++ b/src/components/riskLevel/RiskLevelInput.css
@@ -1,5 +1,4 @@
 .RiskLevelInput {
-  margin-top: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,7 +10,19 @@
   font-weight: 300;
 }
 
+.RiskLevelInput .risk-level-slider {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .RiskLevelInput .risk-level-slider input {
   width: 200px;
   margin: 20px 0;
+}
+
+.RiskLevelInput .risk-level-slider span {
+  margin: 0 10px;
+  font-size: 16px;
 }
