--- a/src/components/riskLevel/RiskLevelInput.css
+++ b/src/components/riskLevel/RiskLevelInput.css
@@ -6,8 +6,17 @@
 }
 
 .RiskLevelInput .risk-level-value {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
   font-size: 5em;
   font-weight: 300;
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 50%;
+  color: #325151;
 }
 
 .RiskLevelInput .risk-level-slider {
