--- a/src/components/riskLevel/RiskLevelInput.css
+++ b/src/components/riskLevel/RiskLevelInput.css
@@ -26,7 +26,7 @@
   align-items: center;
 }
 
-.RiskLevelInput .risk-level-slider input {
+.RiskLevelInput .risk-level-slider input[type="range"] {
   width: 200px;
   margin: 20px 0;
 }
